@@ -10,6 +10,7 @@
  * Client/WebUI/Network: New UI button "Unban" to unban one or all the peers
  * Client/TextUI: New command "peeradd" for manually adding peers to the database
  * Client/TextUI: "net" does not show last recv/sent command (the lines were too long)
+ * Client/WebUI/Miners: Versions tables only show a summary of single occurences of uniqe values
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
